# lifx-lan

./: CHANGELOG.md  README.md  cabal.project  flake.nix  lifx-lan.cabal
gloss-app/: lifx-gloss-app.cabal
gloss-app/src/: Main.hs
products-gen/: Main.hs  products-gen.cabal
src/Lifx/: Lan.hs  Product.hs  ProductInfo.hs
src/Lifx/Internal/: Colour.hs  Product.hs  ProductInfo.hs  ProductInfoMap.hs
src/Lifx/Lan/: Internal.hs
src/Lifx/Lan/Mock/: Terminal.hs
